// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc.server.grpcserver";
option java_outer_classname = "MatrixMult";
option objc_class_prefix = "MM";

package matrixmult;

// The matrix service definition.
service MatrixService{
  rpc MultiplyBlock (MatrixRequest) returns (MatrixReply) {}
  rpc AddBlock (MatrixRequest) returns (MatrixReply) {}
  //modify
  //multiply matrix service
  rpc MultiplySubBlock (MatrixMultiSubRequest) returns (MatrixMultiSubReply) {}
  //modify
  //Addition matrix service
  rpc AdditionSubBlock (MatrixAddSubRequest) returns (MatrixAddSubReply) {}
}

// The request message containing the two matricies
message MatrixRequest {
  int32 a00 = 1;
  int32 a01 = 2;
  int32 a10 = 3;
  int32 a11 = 4;
  int32 b00 = 5;
  int32 b01 = 6;
  int32 b10 = 7;
  int32 b11 = 8;
}

// The response message containing the result marix
message MatrixReply {
  int32 c00 = 1;
  int32 c01 = 2;
  int32 c10 = 3;
  int32 c11 = 4;
}

//modify
//Multiply matrix request message
message MatrixMultiSubRequest {
  repeated int32 a = 1;
  repeated int32 b = 2;
  int32 row = 3;
  int32 clm = 4;

}

//modify
//Multiply matrix response message
message MatrixMultiSubReply {
  int32 c = 1;
  int32 row = 2;
  int32 clm = 3;
}
//modify
//addition matrix request message
message MatrixAddSubRequest {
  repeated int32 a = 1;
  repeated int32 b = 2;
  int32 row = 3;


}

//modify
//addition matrix response message
message MatrixAddSubReply {
  repeated int32 a = 1;
  int32 row = 2;
}
